Apparently a small torrent of changes, since I seem to have forgot to commit a lot of stuff.